Allow scripts to be pulled down from Github through NPM.

--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "update-authors": "git log --format=\"%aN <%aE>\" | sort -f | uniq > AUTHORS.txt",
     "benchmark": "node ./benchmark/runner",
     "benchmark-browser": "node ./benchmark/runner --bundle",
-    "convert-idl": "node ./scripts/webidl/convert"
+    "convert-idl": "node ./scripts/webidl/convert",
+    "preinstall": "npm install --ignore-scripts",
+    "postinstall": "npm run convert-idl"
   },
   "main": "./lib/jsdom"
 }
